--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.2"
+    "hardhat": "^2.10.2",
+    "hardhat-contract-sizer": "^2.5.1",
+    "hardhat-gas-reporter": "^1.0.8"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
