--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy-local": "npx hardhat run scripts/deploy.js --network hardhat",
-    "deploy": "npx hardhat run scripts/deploy.js --network mumbai",
+    "test-local": "npx hardhat test --network ventionMainnet ./test/test-mainnet.js",
+    "deploy": "npx hardhat run scripts/deploy.js --network ventionMainnet",
     "run-local": "npx hardhat run scripts/run.js --network hardhat",
-    "test": "npx hardhat test --network hardhat ./test/test.js"
+    "test": "npx hardhat test --network hardhat ./test/test.js",
+    "verify-control": "npx hardhat run scripts/verifyControlContract.js --network ventionMainnet",
+    "build-contracts": "sol-merger \"./contracts/*.sol\" ./build"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,8 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "hardhat": "^2.10.2",
     "hardhat-contract-sizer": "^2.5.1",
-    "hardhat-gas-reporter": "^1.0.8"
+    "hardhat-gas-reporter": "^1.0.8",
+    "sol-merger": "^4.1.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
